MEP html/css #13501 - stretching suggestion to the full width of the input, #12942 - fixing language chooser, applying one column layout to gift card check page

--- a/skin/frontend/enterprise/default/css/styles.css
+++ b/skin/frontend/enterprise/default/css/styles.css
@@ -446,13 +446,13 @@ ul.disc li,
 
 .switches { float:right; background:#fff url(../images/bkg_header-panel-bg.gif) repeat-x 0 100%; padding:0 0 1px 0; }
 
-.switch { line-height:28px;  margin-left:-1px; margin-right:11px; display:inline; float:left; background:url(../images/bkg_header-panel.gif) no-repeat 0 -29px; padding-left:13px; }
+.switch { line-height:28px;  margin-left:-1px; margin-right:0; display:inline; float:left; background:url(../images/bkg_header-panel.gif) no-repeat 0 -29px; padding-left:13px; }
 .switch label { font-weight:normal; margin-right:0; float:left; }
-.switch .switch-wrapper { float:left; position:relative; z-index:1; padding-left:7px; }
+.switch .switch-wrapper { float:left; position:relative; z-index:1; padding-left:7px; padding-right:11px; }
 .switch strong.current { font-weight:normal; }
 .switch .separator { margin:0 2px; font-size:10px; color:#8f8f8f; }
 .switch .switcher { color:#1e75b4; cursor:pointer; background:url(../images/bkg_header-panel.gif) no-repeat 100% -73px; padding:0 10px 0 0; margin:0 3px 0 1px; }
-.switch ul { position:absolute; min-width:110%; text-align:left; top:0; left:0px; float:left; line-height:16px; padding:0 0 0 0; border-top:0; }
+.switch ul { position:absolute; min-width:100%; text-align:left; top:0; left:0px; float:left; line-height:16px; padding:0 0 0 0; border-top:0; }
 .switch ul li { vertical-align:top; display:block; white-space:nowrap; border:1px solid #c8c8c8; border-top:0; }
 .switch ul li a { white-space:nowrap; display:block; background:#f2f2f2; padding:4px 6px;  color:#1e75b4; text-decoration:none; }
 .switch ul li a:hover { color:#d33911; background:#f8f8f8; }
@@ -462,6 +462,9 @@ ul.disc li,
 .switch .faded li { border-color:#e6e6e6; background-color:#f6f6f6; }
 .switch .faded  a { color:#9ac1dd; }
 
+.switch ul, x:-moz-any-link { width:100%; }/* FireFox 2 fix */
+.switch ul, x:-moz-any-link, x:default { width:auto; }/* FireFox 3 restore */
+
 .list-opened { background-position:100% -129px !important; color:#d33911 !important; }
 
 .header .form-search { float:right; clear:right; padding:5px 0 0; white-space:nowrap; }
@@ -470,8 +473,8 @@ ul.disc li,
 .header .form-search a { display:none; }
 .header .form-search button.button { margin:0 0 0 2px; }
 .header .form-search .search-autocomplete { z-index:999; position:relative!important; top:0!important; left:0!important; height:0!important; overflow:visible!important; }
-.header .form-search .search-autocomplete ul { border:1px solid #c7c7c7; border-top:0; padding-left:0; width:190px; background-color:#fcf8f4; position:absolute; top:-1px; left:20px; }
-.header .form-search .search-autocomplete li { padding:4px 6px 4px 6px; border-bottom:1px solid #fff; font-size:12px; cursor:pointer; }
+.header .form-search .search-autocomplete ul { border:1px solid #c7c7c7; border-top:0; padding-left:0; width:210px; background-color:#fcf8f4; position:absolute; top:-1px; }
+.header .form-search .search-autocomplete li { padding:4px 6px 4px 24px; border-bottom:1px solid #fff; font-size:12px; cursor:pointer; }
 .header .form-search .search-autocomplete li .amount { float:right; font-weight:bold; }
 .header .form-search .search-autocomplete li.selected {}
 .header .form-search .search-autocomplete li.last { border-bottom:0; }
@@ -1341,7 +1344,7 @@ button.btn-cart span {}
 .cart-table thead th { vertical-align:bottom; }
 .cart-table tbody td { padding:12px; }
 .cart-table .btn-continue { float:left; background:none; border:none; }
-.cart-table .btn-continue span { background:none; border:none; text-transform:none; color:#444; text-decoration:underline; font-weight:normal; }
+.cart-table .btn-continue span { background:none; border:none; text-transform:none; color:#444; text-decoration:underline; font-weight:normal; padding:0; }
 .cart-table .btn-update { float:right; }
 
 /* Shopping Cart Collateral boxes */
